--- a/assignment2_exercise3_2.Rmd
+++ b/assignment2_exercise3_2.Rmd
@@ -9,7 +9,7 @@ output:
 highlight: tango
 ---
 ```{r include = FALSE}
-options(digits=5)
+options(digits=9)
 options(knitr.duplicate.label = "allow")
 ```
 
@@ -72,23 +72,24 @@ p-value < 0.05 so there is significant differences between the activity groups, 
 ```{r}
 summary(aov)
 ```
-The high activity group has an estimated 3.60 longevity, while the isolated activity group has 0.52+3.6, and the low activity group has 0.40 + 3.6. This indicates that the lower the  sexual activity, the longer the longevity is as can be seen in the calculation beneth here.
+The high activity group has an estimated 3.60 longevity, while the isolated activity group has 0.52, and the low activity group has 0.40. This indicates that the higher the activity, the longer the longevity is.
 ```{r}
-high <- 3.6021;high
-isolated <- high+0.5172;isolated
-low <- high+0.3977;low
+high <- 3.6021243;exp(high)
+isolated <- high+0.5172246;exp(isolated)
+low <- high+0.3977116;exp(low)
 ```
 
 ### b)
 
 **ANCOVA test:**
 
-```{r}ty,data=fruitflies)
+```{r}
+fruitflies$activity=as.factor(fruitflies$activity)
+fruitflies1=lm(loglongevity~thorax+activity,data=fruitflies)
+fruitflies1
 fruitflies2=lm(loglongevity~thorax,data=fruitflies)
 anova(fruitflies2,fruitflies1)
 ```
-fruitflies$activity=as.factor(fruitflies$activity)
-fruitflies1=lm(loglongevity~thorax+activi
 p-value < 0.05 so again activity has a significant influence on longevity (now considering thorax but not the interaction between thorax and activity).
 
 ```{r}
@@ -105,47 +106,20 @@ Passed the normality test so meets all assumptions for ANCOVA.
 summary(fruitflies1)
 ```
 Does sexual activity increase or decrease longevity?
-The estimates for all three types of activity are >0 and increase from low to isolated to high, and so activity decreases longevity. 
+The estimates for all three types of activity are >0 and increase from low to isolated to high, and so activity increases longevity. 
 
 ```{r}
-max_thorax = max(fruitflies$thorax)
-min_thorax = min(fruitflies$thorax)
-
-predict(fruitflies1,data.frame(thorax = min_thorax, activity = "high"), interval = "confidence")
-predict(fruitflies1,data.frame(thorax = min_thorax, activity = "isolated"), interval = "confidence")
-predict(fruitflies1,data.frame(thorax = min_thorax, activity = "low"), interval = "confidence")
-
-predict(fruitflies1,data.frame(thorax = max_thorax, activity = "high"), interval = "confidence")
-predict(fruitflies1,data.frame(thorax = max_thorax, activity = "isolated"), interval = "confidence")
-predict(fruitflies1,data.frame(thorax = max_thorax, activity = "low"), interval = "confidence")
-```
-Hierboven is voor log longetivity. Hier beneden voor longetivity!
-```{r}
+fruitflies1=lm(loglongevity~thorax+activity,data=fruitflies)
 max_thorax = max(fruitflies$thorax)
 min_thorax = min(fruitflies$thorax)
 
 exp(predict(fruitflies1,data.frame(thorax = min_thorax, activity = "high"), interval = "confidence"))
-predict(fruitflies1,data.frame(thorax = min_thorax, activity = "isolated"), interval = "confidence")
-predict(fruitflies1,data.frame(thorax = min_thorax, activity = "low"), interval = "confidence")
+exp(predict(fruitflies1,data.frame(thorax = min_thorax, activity = "isolated"), interval = "confidence"))
+exp(predict(fruitflies1,data.frame(thorax = min_thorax, activity = "low"), interval = "confidence"))
 
-predict(fruitflies1,data.frame(thorax = max_thorax, activity = "high"), interval = "confidence")
-predict(fruitflies1,data.frame(thorax = max_thorax, activity = "isolated"), interval = "confidence")
-predict(fruitflies1,data.frame(thorax = max_thorax, activity = "low"), interval = "confidence")
-```
-
-
-```{r}
-max_thorax = max(fruitflies$thorax)
-min_thorax = min(fruitflies$thorax)
-fruitflies3 =lm(longevity~thorax+activity,data=fruitflies)
-
-predict(fruitflies3,data.frame(thorax = min_thorax, activity = "high"), interval = "confidence")
-predict(fruitflies3,data.frame(thorax = min_thorax, activity = "isolated"), interval = "confidence")
-predict(fruitflies3,data.frame(thorax = min_thorax, activity = "low"), interval = "confidence")
-
-predict(fruitflies3,data.frame(thorax = max_thorax, activity = "high"), interval = "confidence")
-predict(fruitflies3,data.frame(thorax = max_thorax, activity = "isolated"), interval = "confidence")
-predict(fruitflies3,data.frame(thorax = max_thorax, activity = "low"), interval = "confidence")
+exp(predict(fruitflies1,data.frame(thorax = max_thorax, activity = "high"), interval = "confidence"))
+exp(predict(fruitflies1,data.frame(thorax = max_thorax, activity = "isolated"), interval = "confidence"))
+exp(predict(fruitflies1,data.frame(thorax = max_thorax, activity = "low"), interval = "confidence"))
 ```
 
 What are the estimated longevities for the three groups, for flies with the minimal and maximal thorax lengths?
